src/test/deca/context/valid/sansObjet/IntWithMult.deca
{
    int x = 0;
    x = 20 * 20;
}