src/test/deca/context/invalid/sansObjet/BadMultiplyInt.deca
{
    int x;
    x = 20.0 * 20;
}